[project]
name = "iot-bms-link"
version = "0.9.1"
description = "A cloud-bms gateway driver"
authors = [
    {name = "Henry West",email = "hernaizhenry@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.0)",
    "aiohttp-socks (==0.10.1)",
    "aiosignal (==1.4.0)",
    "aiosqlite (==0.21.0)",
    "altgraph (==0.17.4)",
    "anyio (==4.11.0)",
    "attrs (==25.4.0)",
    "azure-core (==1.36.0)",
    "azure-identity (==1.25.1)",
    "azure-iot-device (==2.14.0)",
    "azure-keyvault (==4.2.0)",
    "azure-keyvault-certificates (==4.10.0)",
    "azure-keyvault-keys (==4.11.0)",
    "azure-keyvault-secrets (==4.10.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "cleo (==2.1.0)",
    "colorlog (==6.9.0)",
    "crashtest (==0.4.1)",
    "cryptography (==46.0.2)",
    "deprecation (==2.1.0)",
    "distlib (==0.4.0)",
    "dulwich (==0.24.4)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.20.0)",
    "findpython (==0.7.0)",
    "frozenlist (==1.8.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.11)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "isodate (==0.7.2)",
    "janus (==2.0.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jeepney (==0.9.0)",
    "keyring (==25.6.0)",
    "markdown-it-py (==4.0.0)",
    "mdurl (==0.1.2)",
    "more-itertools (==10.8.0)",
    "msal (==1.34.0)",
    "msal-extensions (==1.3.1)",
    "msgpack (==1.1.2)",
    "multidict (==6.7.0)",
    "numpy (==2.3.3)",
    "packaging (==25.0)",
    "paho-mqtt (==1.6.1)",
    "pandas (==2.3.2)",
    "pbs-installer (==2025.10.10)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.5.0)",
    "pluggy (==1.6.0)",
    "poetry (==2.2.1)",
    "poetry-core (==2.2.1)",
    "propcache (==0.4.1)",
    "pycparser (==2.23)",
    "pygments (==2.19.2)",
    "pyinstaller (==6.16.0)",
    "pyinstaller-hooks-contrib (==2025.9)",
    "pyjwt (==2.10.1)",
    "pyproject-hooks (==1.2.0)",
    "pysocks (==1.7.1)",
    "pytest (==8.4.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-socks (==2.7.2)",
    "pytz (==2025.2)",
    "rapidfuzz (==3.14.1)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "requests-unixsocket2 (==1.0.1)",
    "rich (==14.1.0)",
    "secretstorage (==3.4.0)",
    "setuptools (==80.9.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "tenacity (==9.1.2)",
    "tomlkit (==0.13.3)",
    "trove-classifiers (==2025.9.11.17)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.35.3)",
    "xmltodict (==1.0.2)",
    "yarl (==1.22.0)",
    "zstandard (==0.25.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
